--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/stack": "^6.0.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/socket.io-client": "^1.4.36",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-contacts": "^7.0.8",
+    "react-native-contacts": "^8.0.7",
     "react-native-gesture-handler": "^2.16.1",
-    "react-native-gifted-chat": "^2.8.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.12.0",
-    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-share": "^12.2.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^9.2.0",
@@ -46,7 +46,6 @@
     "@react-native/typescript-config": "0.81.4",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
-    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
