--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-camera-roll/camera-roll": "^7.10.2",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^23.3.1",
     "@react-native-firebase/auth": "^23.3.1",
@@ -24,6 +25,7 @@
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-contacts": "^8.0.7",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.5.2",
