--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-share": "^12.2.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^6.17.0",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1"
   },
