--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-camera-roll/camera-roll": "^7.10.2",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-documents/picker": "^10.1.7",
     "@react-native-firebase/app": "^23.3.1",
     "@react-native-firebase/auth": "^23.3.1",
     "@react-native-firebase/storage": "^23.3.1",
@@ -28,6 +29,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.1",
     "react-native-image-picker": "^8.2.1",
+    "react-native-permissions": "^5.4.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.12.0",
     "react-native-share": "^12.2.0",
