logo and play protect errors

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,7 +109,13 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.release
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                signingConfig signingConfigs.release
+            } else {
+                signingConfig signingConfigs.debug
+            }
+            // Temporary: Use debug keystore for Firebase compatibility
+            signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -139,16 +145,4 @@ dependencies {
     } else {
         implementation jscFlavor
     }
-    
-    // Permissions handling
-    implementation 'com.karumi:dexter:6.2.3'
-    
-    // Contacts and phone number handling
-    implementation 'com.google.android.gms:play-services-auth:20.7.0'
-    implementation 'com.google.android.gms:play-services-identity:18.0.1'
-    
-    // Media handling
-    implementation 'androidx.exifinterface:exifinterface:1.3.6'
-    implementation 'androidx.media3:media3-exoplayer:1.1.1'
-    implementation 'androidx.media3:media3-ui:1.1.1'
 }
